Fixed image overflow

--- a/css/about.css
+++ b/css/about.css
@@ -5,3 +5,7 @@
 #staff-container h1{
  text-align: center;
 }
+
+#motorsag-pic {
+    overflow: hidden;
+}
